# scratchpad

./: .gitignore  README.md
.github/workflows/: dev.yml  main.yml
electron/: electron-builder.json5  package-lock.json  package.json  tailwind.config.js  vite.config.ts
electron/electron/: main.ts
electron/src/: index.css  main.tsx  routeTree.gen.ts
electron/src/routes/: __root.tsx  dashboard.tsx
rag/: api.py  config.py  dependencies.py  main.py  pyproject.toml  railway.json  repo.py  requirements.txt
rag/auth/: oauth.py
rag/db/: supabase.py  user.py
rag/models/: auth.py  chunks.py  document.py  document_data.py  documents.py  folder.py  queries.py  user.py
rag/routers/: document.py  document_data.py  documents.py  folders.py  search.py  text_search.py  user.py
tauri/: bun.lockb  middleware.js  next.config.mjs  package.json  tailwind.config.js
tauri-react/: '  ':w  biome.json  bun.lockb  package.json  tailwind.config.js  vite.config.ts
tauri-react/src/: app_state.tsx  auth.tsx  index.css  main.tsx  routeTree.gen.ts  tiptap.scss  tiptap_context.tsx  welcome.tsx
tauri-react/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tauri-react/src-tauri/capabilities/: migrated.json
tauri-react/src-tauri/src/: auth.rs  error.rs  main.rs  state.rs  util.rs
tauri-react/src-tauri/src/fetch/: auth.rs  document.rs  mod.rs  search.rs  user.rs
tauri-react/src-tauri/src/mac/: window.rs
tauri-react/src/api_requests/: auth.ts  auth_options.ts
tauri-react/src/components/account/: account.tsx
tauri-react/src/components/auth/: login.tsx  login_form.tsx  register.tsx  register_form.tsx
tauri-react/src/components/collate/: collate.tsx
tauri-react/src/components/command/: command.tsx
tauri-react/src/components/dnd/: sortableitem.jsx  sortableitem.tsx
tauri-react/src/components/filetree/: SortableTree.tsx  collisionAlgorithm.tsx  dropzone.tsx  editorDropzone.tsx  keyboardCoordinates.ts  types.ts  utilities.ts
tauri-react/src/components/header/: header.tsx
tauri-react/src/context/: font_context.tsx  tiptap_context.tsx
tauri-react/src/fetch/: auth.ts  documents.ts  documents.tsx  folder.ts  search.ts  search.tsx
tauri-react/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx  search.tsx
tauri-react/src/utilities/: fileutils.tsx  sync.ts
tauri/app/: layout.js  page.js
tauri/app/home/: page.js
tauri/components/login/: login_form.jsx  login_logo.jsx
tauri/lib/: api_helpers.js  utils.js
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
(+64 files in other folders)
