[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
python-dotenv="^1.0.0"
openai="^1.13.3"
langchain="^0.1.11"
supabase="^2.4.0"
tiktoken="^0.6.0"
fastapi[all]="^0.110.0"
uvicorn="^0.28.0"
python-multipart="^0.0.9"
python-jose[cryptography]="^3.3.0"
fastapi-utils="^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
